<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_text"
        android:layout_weight="0"
        android:layout_margin="5dp"
        android:inputType="text"
        android:hint="@string/hint_title" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:inputType="numberDecimal"
            android:id="@+id/radius_text"
            android:hint="@string/hint_radius"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distance_spinner"
            android:layout_weight="0">

        </Spinner>
    </LinearLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/recurring"
        android:id="@+id/recurring_box"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            android:text="@string/save_btn"
            style="?android:buttonBarButtonStyle"
            android:id="@+id/save_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            android:text="@string/cancel_btn"
            style="?android:buttonBarButtonStyle"
            android:id="@+id/cancel_button"/>
    </LinearLayout>
</LinearLayout>